# Turing-Test-Service

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml
HW5 -MLFlow/: Dockerfile.mlflow  prepare_data.py  train.py
HW5 -MLFlow/annotations/annotations_150f1/: 1  10  11  12  13  14  15  16  17  18  19  2  3  4  5  6  7  8  9
HW5 -MLFlow/annotations/annotations_18e33/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  45  (+29 more)
HW5 -MLFlow/annotations/annotations_21232/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  45  (+25 more)
HW5 -MLFlow/annotations/annotations_370de/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  45  (+12 more)
HW5 -MLFlow/annotations/annotations_399a2/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  45  (+13 more)
HW5 -MLFlow/annotations/annotations_7e1e9/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  45  (+16 more)
HW5 -MLFlow/annotations/annotations_894cd/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  45  (+17 more)
HW5 -MLFlow/annotations/annotations_abe5b/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  45  (+16 more)
HW5 -MLFlow/annotations/annotations_b0b22/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  45  (+11 more)
HW5 -MLFlow/annotations/annotations_b4944/: 1  10  11  12  (+47 more)
HW5 -MLFlow/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
HW5 -MLFlow/data/: train.csv  val.csv
HW5 -MLFlow/tests/: sample_dialog.json  test_champion_model.py
data/preprocessed_data/: test.csv  train.csv
inference_service/: Dockerfile  app.py  requirements.txt  schemas.py
load-train-eval-champ-model/: .env  dataset.py  evaluate.py  params.py  train.py  train_test_split.py
manifests/: deploy.sh  kuber_practice.sh  manifest.yaml  model.yaml  practice.yaml
monitoring/: alerts.yml  prometheus.yml
tests/: inference_requests.txt  inference_responses.txt  test_dataset.py  test_evaluate.py  test_train.py  test_train_test_split.py
tools/shooter/: Dockerfile  main.py  requirements.txt
turing_test_service/: Dockerfile  main.py  requirements.txt
turing_test_service/data/: schemas.py
(+129 files in other folders)
